Add checkbox to listing form

--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -6,6 +6,6 @@
   <%= f.label :price %>
   <%= f.number_field :price %>
   <%= f.label :available %>
-  <%= f.text_field :available %>
+  <%= f.check_box :available %>
   <%= f.submit %>
 <% end %>
