add test for action mailer

--- a/app/views/listings/_listing.html.erb
+++ b/app/views/listings/_listing.html.erb
@@ -1,3 +1,4 @@
+<p><%= image_tag listing.photo.url(:medium) %></p>
 <p><%= listing.description %></p>
 <p>$<%= listing.price %></p>
 <p><%= listing.location %></p>
