--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @listing, remote: true do |f| %>
+<%= form_for @listing, :html => { :multipart => true } do |f| %>
   <%= f.label :description %>
   <%= f.text_area :description %>
   <%= f.label :location %>
@@ -7,5 +7,6 @@
   <%= f.number_field :price %>
   <%= f.label :available %>
   <%= f.check_box :available %>
+  <%= f.file_field :photo %>
   <%= f.submit %>
 <% end %>
