--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @listing, :html => { :multipart => true } do |f| %>
+<%= form_for @listing, :remote => true, :html => { :multipart => true } do |f| %>
   <%= f.label :description %>
   <%= f.text_area :description %>
   <%= f.label :location %>
