--- a/app/views/listings/_listing.html.erb
+++ b/app/views/listings/_listing.html.erb
@@ -1,5 +1,8 @@
 <p><%= image_tag listing.photo.url(:medium) %></p>
-<p><%= listing.description %></p>
+<p><%= link_to listing_path(listing) do %>
+    <%= listing.description %>
+  <% end %>
+</p>
 <p>$<%= listing.price %></p>
 <p><%= listing.location %></p>
 <p>Listing is
